# Mixpanel-Demo-App-2318156

./: .gitignore  .replit  README.md  db.sqlite3  pyproject.toml
accounts/: forms.py  receivers.py
accounts/templates/accounts/: register.html
hnclone/: context_processors.py  middleware.py  settings.py
news/: receivers.py  urls.py  views.py
news/templates/news/: __base.html
static/: news.css
