[tool.poetry]
name = "pythonic-news-48"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django-debug-toolbar = "^3.2"
mistune = "^0.8.4"
ratelimit = "^2.2.1"
django = "2.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
